fixed. navbar voices on mobile media-query

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -128,7 +128,7 @@ li {
   text-align: center;
   text-decoration: none;
   color: rgba(71, 99, 223, 0.95);
-  font-size: 3rem;
+  font-size: 1.5rem;
   font-family: 'Poppins', sans-serif;
   text-align: center;
   font-weight: 700;
@@ -138,7 +138,7 @@ li {
   transition: all 0.2s ease;
   background-color: rgba(240, 244, 255, 0);
   width: auto;
-  width: 90vw;
+  width: 50vw;
   white-space: nowrap;
   padding: 20px;
   margin: 0 auto;
